refactor: Info 도메인 역할 분리 적용